Moved to SimpleGPT lib as OpenAI's client

--- a/VoiceGpt.App/VoiceGpt.App.csproj
+++ b/VoiceGpt.App/VoiceGpt.App.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SimpleGPT.Core" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VoiceGpt.Core\VoiceGpt.Core.csproj" />
   </ItemGroup>
 
